--- a/styles/style.css
+++ b/styles/style.css
@@ -152,7 +152,7 @@ input {
     max-width: 1200px;
     margin: 0 auto;
     display: flex;
-    margin-top: 100px;
+    margin-top: 30px;
     justify-content: center;
 }
 
@@ -172,7 +172,8 @@ input {
     font-size: 16px;
     font-weight: 400;
     padding-bottom: 20px ;
-    line-height: 25px;
+    line-height: 30px;
+    padding-right: 20px ;
 }
 
 .tour-text ul>li {
