inherited menu bar icon

--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -8,8 +8,8 @@
         display: none;
     }
 
-    .icons {
-        display: block;
+    .icons{
+        visibility: inherit;
         padding-top: 35px;
         padding-right: 10px;
         justify-content: center;
