--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -202,21 +202,18 @@
         margin: 0;
         padding-top: 10px;
         text-align: left;
-        width: 400px;
-        height: 100%;
+        width: calc(100% - 25px);
     }
     .map{
         margin: 0;
         padding: 0;
         text-align: left;
-        width: 400px;
-        height: 100%;
+        width: 100% ;
     }
     .price {
         margin: 0;
         padding-top: 10ox;
         text-align: left;
-        width: 400px;
-        height: 100%;
+        width: calc(100% - 25px);
     }
 }
