--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -122,6 +122,7 @@
 
     .third {
         grid-template-columns: 1fr;
+        row-gap: 16px;
     }
 
     .img1,
@@ -202,7 +203,7 @@
         margin: 0;
         padding-top: 10px;
         text-align: left;
-        width: calc(100% - 25px);
+        width: calc(100% - 20px);
     }
     .map{
         margin: 0;
@@ -214,6 +215,6 @@
         margin: 0;
         padding-top: 10ox;
         text-align: left;
-        width: calc(100% - 25px);
+        width: calc(100% - 20px);
     }
 }
