--- a/styles/style.css
+++ b/styles/style.css
@@ -396,3 +396,58 @@ input {
     border-radius: 16px;
     margin-bottom: 30px;
 }
+/*Upcoming Tour Section Styles*/
+.upcoming-tour-section{
+    max-width: 1200px;
+    margin: 30px auto 0;
+}
+.upcoming-tour{
+    text-align: center;
+    padding: 0 50px;
+}
+.upcoming-list{
+    margin-top: 40px;
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    gap: 40px;
+    margin-bottom: 15px;
+}
+.upcoming-image1, .upcoming-image2, .upcoming-image3{
+    background-color: #dbdbdb;
+    width: 370px;
+    height: 400px;
+    border-radius: 10px;
+    margin-bottom: 15px;
+}
+.upcoming-image1 img, .upcoming-image2 img, .upcoming-image3 img{
+    width: 250px;
+    height: 200px;
+    padding: 65px 65px 0 65px;
+}
+.upcoming-image1 p, .upcoming-image2 p, .upcoming-image3 p{
+    font-size: 17px;
+    padding-left: 65px;
+    padding-bottom: 20px;
+}
+.upcoming-list2{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    gap: 40px;
+}
+.upcoming-image4, .upcoming-image5, .upcoming-image6{
+    background-color: #dbdbdb;
+    width: 370px;
+    height: 400px;
+    border-radius: 10px;
+    margin-bottom: 15px;
+}
+.upcoming-image4 img, .upcoming-image5 img, .upcoming-image6 img{
+    width: 250px;
+    height: 200px;
+    padding: 65px 65px 0 65px;
+}
+.upcoming-image4 p, .upcoming-image5 p, .upcoming-image6 p{
+    font-size: 17px;
+    padding-left: 65px;
+    padding-bottom: 20px;
+}
