--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -229,38 +229,19 @@
         font-size: 10px;
         padding: 0
     }
-    .upcoming-list{
-        grid-template-columns: 1fr;
-    }
-    .upcoming-images1, .upcoming-images2, .upcoming-images3{
-        width: 100%;
-    }
-    .upcoming-list2{
-        grid-template-columns: 1fr;
-    }
-    .upcoming-images4, .upcoming-images5, .upcoming-images6{
-        width: 100%;
-    }
-    .upcoming-image1 img, .upcoming-image2 img, .upcoming-image3 img{
-        width: 87%px;
-        height: 50%;
-        padding: 14px 14px 0 40px;
-    }
-    .upcoming-image1 p, .upcoming-image2 p, .upcoming-image3 p{
-        font-size: 17px;
-        padding-left: 40px;
-        padding-bottom: 20px;
-    }
-    .upcoming-image4 img, .upcoming-image5 img, .upcoming-image6 img{
-        width: 84%;
-        height: 50%;
-        padding: 14px 14px 0 14px;
-    }
-    .upcoming-image4 p, .upcoming-image5 p, .upcoming-image6 p{
-        font-size: 17px;
-        padding-left: 15px;
-        padding-bottom: 20px;
-    }
-    
-
+   .upcoming-list{
+    grid-template-columns: 1fr;
+   }
+   .upcoming-image1, .upcoming-image2, .upcoming-image3{
+    width: 100%;
+    padding: 0;
+   }
+   .upcoming-list2{
+    grid-template-columns: 1fr;
+   }
+   .upcoming-image4, .upcoming-image5, .upcoming-image6{
+    width: 100%;
+    padding: 0;
+   }
+   
 }
