--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -199,49 +199,112 @@
         text-align: left;
         width: 100%;
     }
-    .hotel{
+
+    .hotel {
         margin: 0;
         padding-top: 10px;
         text-align: left;
         width: calc(100% - 20px);
     }
-    .map{
+
+    .map {
         margin: 0;
         padding: 0;
         text-align: left;
-        width: 100% ;
+        width: 100%;
     }
+
     .price {
         margin: 0;
         padding-top: 10ox;
         text-align: left;
         width: calc(100% - 20px);
     }
+
     /*Upcoming Tour Section Styles*/
-    .upcoming-tour{
+    .upcoming-tour {
         text-align: center;
         padding: 0;
     }
-    .upcoming-tour h3{
+
+    .upcoming-tour h3 {
         font-size: 15px;
     }
-    .upcoming-tour p{
+
+    .upcoming-tour p {
         font-size: 10px;
         padding: 0
     }
-   .upcoming-list{
-    grid-template-columns: 1fr;
-   }
-   .upcoming-image1, .upcoming-image2, .upcoming-image3{
-    width: 100%;
-    padding: 0;
-   }
-   .upcoming-list2{
-    grid-template-columns: 1fr;
-   }
-   .upcoming-image4, .upcoming-image5, .upcoming-image6{
-    width: 100%;
-    padding: 0;
-   }
-   
+
+    .upcoming-list {
+        grid-template-columns: 1fr;
+    }
+
+    .upcoming-image1,
+    .upcoming-image2,
+    .upcoming-image3 {
+        width: 100%;
+        padding: 0;
+    }
+
+    .upcoming-list2 {
+        grid-template-columns: 1fr;
+    }
+
+    .upcoming-image4,
+    .upcoming-image5,
+    .upcoming-image6 {
+        width: 100%;
+        padding: 0;
+    }
+
+    /*Simple Perfect Place Section Styles*/
+    .simple-perfect-place {
+        flex-direction: column;
+        width: 100%;
+        overflow-x: hidden;
+    }
+    .perfect-text{
+        width: 100%;
+    }
+    .perfect-text h3{
+        font-size: 15px;
+    }
+    .perfect-text p{
+        font-size: 10px;
+    }
+    .perfect-text ul>li{
+        font-size: 8px;
+    }
+    .perfect-img{
+        width: 100%;
+    }
+    .perfect-img h3{
+        font-size: 15px;
+    }
+    .perfect-img img{
+        width: 100%;
+        margin-top: 15px;
+        padding: 0;
+    }
+    .frame1{
+        top: 75%;
+    }
+    .frame1 p{
+        top: -10%;
+    }
+    .volume{
+        top: 75%;
+        left: 70%;
+    }
+    .max{
+        top: 75%;
+        left: 80%;
+    }
+    .frame2{
+        top: 75%;
+        left: 90%;
+    }
+    
+
 }
