fix responsive problem

--- a/styles/style.css
+++ b/styles/style.css
@@ -680,7 +680,9 @@ input {
 }
 
 .footer-logo {
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     padding-top: 60px;
 }
 
